[project]
name = "ipldstore"
version = "0.2.0"
description = "KV store for Zarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.18.6",
    "multiformats[full]>=0.3.1.post4",
    "py-hamt",
    "requests>=2.32.3",
    "zarr>=2.18.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.118.8",
    "memray>=1.14.0",
    "pdoc>=15.0.0",
    "py-hamt",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "snakeviz>=2.2.2",
    "xarray>=2024.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
]

[tool.uv.sources]
py-hamt = { git = "https://github.com/dClimate/py-hamt", rev = "2d87d50e9f2c1c31e988d1666f32bbf6927c0fca" }
