# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = ipfs_zarr_store
author = Evan Schechter
author_email = evan@arbol.io
description = Zarr storage backend on IPFS
long_description = file: README.md
long_description_content_type = text/markdown
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    typing-extensions
    typing-validation == 0.0.2
    multiformats
    dag-cbor == 0.2.2
    pure-protobuf >= 2.1.0
    numcodecs
    requests
    cbor2
    zarr
    psutil
    dask[distributed]
    py-hamt @ git+https://github.com/dClimate/py-hamt@v1.1.0

[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    zarr
    mypy
    pylint
    pytest
    pytest-cov

[flake8]
max-line-length = 160
